fix: center alignment and empty spaces

--- a/css/main.css
+++ b/css/main.css
@@ -67,9 +67,6 @@ body {
 
 }
 
-.container {
-    width: 75%;
-}
 
 #background {
     background: black url("../images/bg.jpg") center no-repeat;
